[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/ui/NewGame.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/Quit.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/TitleLogo.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/GameScreen.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/Options.png" type="Texture" id=5]
[ext_resource path="res://src/UI/SceneTransictionRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://assets/audio/music/mainmenu.mp3" type="AudioStream" id=8]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1168.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 400.0
margin_bottom = 640.0

[node name="TitleLogo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 100.0
texture = ExtResource( 3 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 400.0
margin_bottom = 576.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="NewGame" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 54.0
margin_right = 400.0
margin_bottom = 154.0
texture = ExtResource( 1 )

[node name="Options" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
modulate = Color( 0.423529, 0.380392, 0.290196, 1 )
margin_top = 184.0
margin_right = 400.0
margin_bottom = 284.0
texture = ExtResource( 5 )

[node name="Quit" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 314.0
margin_right = 400.0
margin_bottom = 414.0
texture = ExtResource( 2 )

[node name="GameVersion" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 584.0
margin_right = 400.0
margin_bottom = 640.0
text = "ver 0.9.alpha
H.E.I."

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 408.0
margin_right = 1048.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameScreen" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_right = 640.0
margin_bottom = 640.0
texture = ExtResource( 4 )

[node name="SceneTransictionRect" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 1168.0
margin_bottom = 720.0

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/Quit" to="." method="_on_Quit_gui_input"]
